# librarian

./: .gitignore  AUTHORS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  NOTICE  README.md  README.txt  a.py  ez_setup.py  flirt-z-melpomena.fragments.html  flirt-z-melpomena.html  flirt-z-melpomena.xml  mickiewicz.epub  mickiewicz.txt  podrecznik.tex  podrecznik.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
font-optimizer/: subset.pl
font-optimizer/.hg/: dirstate  hgrc  tags.cache  undo.desc
font-optimizer/Font/: Subsetter.pm
librarian/: __init__.py  book2anything.py  book2txt.xslt  config.xml  core.py  cover.py  dcparser.py  document.py  epub.py  fb2.py  fn_qualifiers.py  functions.py  html.py  latex.py  meta.py  mobi.py  output.py  packagers.py  parser.py  partners.py  pdf.py  pdf_from_html.py  picture.py  pyhtml.py  pypdf.py  renderers.py  sponsor.py  text.py  util.py  utils.py  weasy.py  wl2html_base.xslt  wl2html_full.xslt  wl2html_partial.xslt  wl_light.py  xmlutils.py
milpdf/: a.xml  m.xml  p.xml
scripts/: book2cover  book2epub  book2fb2  book2html  book2ihtml  book2mobi  book2partner  book2pdf  book2txt  bookfragments  fn_qualifiers_list_from_redmine.py  genslugs  master.css  master.plain.css  normalize.py
tests/: test_dcparser.py  test_doctests.py  test_epub.py  test_fb2.py  test_html.py  test_html_annotations.py  test_html_examples.py  test_html_fragments.py  test_html_transform_abstrakt.py  test_iofile.py  test_latex.py  test_mobi.py  test_pdf.py  test_picture.py  test_pyhtml.py  test_ref.py  test_text.py  utils.py
(+501 files in other folders)
